Updated image source

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
       <!--including image before about me but after logo-->
       <section class="photo">
-        <img src="images/charisse-waller-bio.jpeg" alt="Profile image of Charisse Waller">
+        <img src="charisse-waller-bio.jpeg" alt="Profile image of Charisse Waller">
       </section>
       <!-- seperating text from logo-->
       <section class="intro-caption">
